--- a/Neural_network_v3.ipynb
+++ b/Neural_network_v3.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working example: birary classification problem"
+    "# Working example: binary classification problem"
    ]
   },
   {
